--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -1,5 +1,11 @@
 .loginWrap {
   width: 100%;
   height: 100%;
-  // background-color: red;
+  .title {
+    font-size: 2vw;
+    font-weight: 700;
+  }
+  .loginBox {
+    min-width: 600px;
+  }
 }
